Fix the home page and added about me

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -68,7 +68,7 @@ params:
         url: posts
 
   homeInfoParams:
-    Title: "Hi there \U0001F44B"
+    Title: "MUGUREL"
     Content: Welcome to my blog
 
   socialIcons:
